tests/parser/expression-statement-not-terminated.stderr
error: expected ';'
 --> $DIR/expression-statement-not-terminated.lox:1:7
  |
1 | 5 + 7 _
  |       ^
